full userservice + swagger + unit test
